--- a/src/MPC_IO/include/mpio.h.in
+++ b/src/MPC_IO/include/mpio.h.in
@@ -87,17 +87,17 @@ typedef int MPI_Fint;
 # define MPI_MAX_INFO_VAL      1024
 #endif
 
-#define MPI_MODE_RDONLY              2  /* ADIO_RDONLY */
-#define MPI_MODE_RDWR                8  /* ADIO_RDWR  */
-#define MPI_MODE_WRONLY              4  /* ADIO_WRONLY  */
-#define MPI_MODE_CREATE              1  /* ADIO_CREATE */ 
-#define MPI_MODE_EXCL               64  /* ADIO_EXCL */
-#define MPI_MODE_DELETE_ON_CLOSE    16  /* ADIO_DELETE_ON_CLOSE */
-#define MPI_MODE_UNIQUE_OPEN        32  /* ADIO_UNIQUE_OPEN */
-#define MPI_MODE_APPEND            128  /* ADIO_APPEND */
-#define MPI_MODE_SEQUENTIAL        256  /* ADIO_SEQUENTIAL */
+#define MPI_MODE_APPEND            (1<<1)  /* ADIO_APPEND */
+#define MPI_MODE_CREATE            (1<<2)  /* ADIO_CREATE */ 
+#define MPI_MODE_DELETE_ON_CLOSE   (1<<3)  /* ADIO_DELETE_ON_CLOSE */
+#define MPI_MODE_EXCL              (1<<4)  /* ADIO_EXCL */
+#define MPI_MODE_RDONLY            (1<<5)  /* ADIO_RDONLY */
+#define MPI_MODE_RDWR              (1<<6)  /* ADIO_RDWR  */
+#define MPI_MODE_SEQUENTIAL        (1<<7)  /* ADIO_SEQUENTIAL */
+#define MPI_MODE_UNIQUE_OPEN       (1<<8)  /* ADIO_UNIQUE_OPEN */
+#define MPI_MODE_WRONLY            (1<<9)   /* ADIO_WRONLY  */
 
-#define MPI_DISPLACEMENT_CURRENT   -54278278
+#define MPI_DISPLACEMENT_CURRENT  ((MPI_Offset) -2) 
 
 #ifndef MPICH
 /* FIXME: Make sure that we get a consistent definition of MPI_FILE_NULL
@@ -123,12 +123,12 @@ typedef int MPI_Fint;
 /* *INDENT-ON* */
 #endif
 #ifndef HAVE_MPI_DARRAY_SUBARRAY
-#  define MPI_ORDER_C             56
-#  define MPI_ORDER_FORTRAN       57
-#  define MPI_DISTRIBUTE_BLOCK    121
-#  define MPI_DISTRIBUTE_CYCLIC   122
-#  define MPI_DISTRIBUTE_NONE     123
-#  define MPI_DISTRIBUTE_DFLT_DARG -49767
+#  define MPI_ORDER_C             4321
+#  define MPI_ORDER_FORTRAN       1234
+#  define MPI_DISTRIBUTE_BLOCK     121
+#  define MPI_DISTRIBUTE_CYCLIC    122
+#  define MPI_DISTRIBUTE_NONE      123
+#  define MPI_DISTRIBUTE_DFLT_DARG  -1
 #endif
 
 
